# mini_parser

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  b.sh  build.sh
include/: lexer.h  parser.h  token.h
src/: lexer.c  main.c  parser.c  token.c
